# Modelo-predictivo-ecogrow

./: .gitignore  README.md  dataset_entrenamiento.csv  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 3fe0be1aeff9_initial.py
backend/: entrenar_modelo.py  explorar_dataset.py  modelo_ecogrow.pkl  probar_modelo.py  visualizar_arbol.py
backend/app/: main.py
backend/app/auth/: auth_service.py  dependencies.py  hashing.py  jwt_handler.py
backend/app/core/: config.py  database.py  limiter.py  ml.py
backend/app/models/: __init__.py  predict.py  prediction_result.py  user.py
backend/app/models/enums/: __init__.py  crop.py  humidity.py  temperature.py  user.py  watering.py
backend/app/routers/: auth_router.py  predict_router.py
backend/app/schemas/: auth_schema.py  common.py  predict_schema.py
backend/app/services/: auth_service.py  ecogrow_service.py
data/: dataset_ecogrow_v2.csv
docs/: arboles_texto.txt  feature_importance.txt
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/api/: client.js
frontend/src/components/: BottomNav.jsx  DashboardScreen.jsx  HistoryScreen.jsx  LoginScreen.jsx  PredictionScreen.jsx  Sidebar.jsx
frontend/src/constants/: palettes.js  tweakDefaults.js
frontend/src/hooks/: useTweaks.js
frontend/src/utils/: status.js  theme.js
