[project]
name = "ecogrow"
version = "0.1.0"
description = "Modelo predictivo EcoGrow"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.1",
    "uvicorn>=0.47.0",
    "python-dotenv>=1.0.0",
    "sqlalchemy>=2.0.49",
    "uuid6>=2025.0.1",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.0",
    "alembic>=1.16.0",
    "pydantic-settings>=2.14.1",
    "slowapi>=0.1.9",
    "pydantic[email]>=2.13.4",
    "argon2-cffi>=25.1.0",
    "scikit-learn>=1.7.2",
    "pandas>=2.0.0",
    "joblib>=1.3.0",
]
